# stctm

./: .gitignore  .readthedocs.yaml  README.md  __init__.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: draft-pdf.yml
docs/: conf.py  index.rst  requirements.txt
docs/api/: api.rst  exotune_utilities.rst  pystellspec.rst  pytransmspec.rst  stellar_retrieval_utilities.rst
docs/content/: citations.rst  contributions.rst  grid.rst  installation.rst  retrieval_basics.rst  running_TLS.rst  running_exotune.rst  usage.rst
example/: create_fixedR_grid_pymsg_template.py  next_to_do.txt
example/exotune_analysis/template_exotune_analysis/: exotune_runscript_v3_clean_20250409.py  exotune_runscript_v5_clean_20250422.py  template_ini_exotune.ini  template_ini_exotune.toml
example/observations/TRAPPIST_1_NIRSpec/: exotune_templatespectrum.csv
example/observations/TRAPPIST_1_b_NIRISS_SOSS/: Visit1_Order1And2.spec
example/observations/testing/: spec_fortest_1bin.spec
example/stellar_contamination_analysis/TRAPPIST_1_d_analysis/: stellar_retrieval_v12_testingnewprior.py
example/stellar_contamination_analysis/template_analysis/: pytransmspec.py  stellar_retrieval_utilities.py  stellar_retrieval_v10_generic_runfile.py  stellar_retrieval_v13_generic_runfile.py  stellar_retrieval_v14_generic_runfile.py  test_ini_stctm.ini  (+4 more)
joss/: paper.bib  paper.md  paper.tex
stctm/: __init__.py  exotune_mcmc_engine.py  exotune_parallel_setup.py  exotune_parallel_utilities.py  exotune_utilities.py  pystellspec.py  pytransmspec.py  stellar_retrieval_utilities.py
stctm/cli/: stctm_exotune.py  stctm_tls.py
stctm/runners/: exotune_runner.py  tls_runner.py
(+2 files in other folders)
