[metadata]
name = stctm
version = 1.0.0
author = Caroline Piaulet-Ghorayeb
author_email = caroline.piaulet@umontreal.ca
description = Stellar contamination retrievals and modeling on small planet transmission spectra.
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU GPL v3.0
license_files = [LICENSE,]
url = http://github.com/cpiaulet/stctm
project_urls =
    Bug Tracker = https://github.com/cpiaulet/stctm/issues
    Source Code = https://github.com/cpiaulet/stctm


      
[options]
packages = stctm
zip_safe = True
python_requires= >=3.9.7
install_requires =
    astropy
    corner
    emcee
    h5py
    matplotlib
    numpy
    pandas
    pysynphot
    scipy
    tqdm
