[metadata]
name = stctm
version = 2.0.0
author = Caroline Piaulet-Ghorayeb
author_email = carolinepiaulet@uchicago.edu
description = Retrievals on small planet transmission spectra affected by stellar contamination and out-of-transit stellar spectra.
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU GPL v3.0
license_files =
    LICENSE
url = http://github.com/cpiaulet/stctm
project_urls =
    Bug Tracker = https://github.com/cpiaulet/stctm/issues
    Source Code = https://github.com/cpiaulet/stctm/


      
[options]
packages = find:
zip_safe = True
python_requires= >=3.9.7
install_requires =
    astropy
    corner
    emcee
    h5py
    matplotlib
    numpy<2.0 # Upper limit needed for pysynphot compatibility
    pandas
    pysynphot
    scipy
    tqdm

[options.packages.find]
where = .